<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_product">


    <ImageView
        android:id="@+id/productImage"
        android:layout_width="match_parent"
        android:layout_height="300dp" />
<!--    android:background="@android:color/darker_gray"-->

    <TextView
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/general_margin"
        android:text="@string/productNamePlaceholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/productSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/general_margin"
        android:text="@string/productInfoPlaceholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/productInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:padding="@dimen/general_margin"
        android:text="@string/review_text_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
</merge>