<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_margin"
        app:cardCornerRadius="@dimen/general_margin"
        app:cardElevation="@dimen/general_margin"
        app:contentPadding="@dimen/general_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/productPreview"
                android:layout_width="200dp"
                android:layout_height="250dp" />
<!--            android:background="@android:color/darker_gray"-->

            <TextView
                android:id="@+id/productPreviewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/general_margin"
                android:text="@string/productNamePlaceholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/productPreviewInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="@dimen/general_margin"
                android:singleLine="true"
                android:text="@string/productInfoPlaceholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/productPreviewPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/general_margin"
                android:text="@string/productPricePlaceholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>
