<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:id="@+id/reviewID"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:id="@+id/UUID"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_margin"
        app:cardCornerRadius="@dimen/general_margin"
        app:cardElevation="@dimen/general_margin"
        app:contentPadding="@dimen/general_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reviewUsername"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:maxLines="1"
                    android:padding="@dimen/general_margin"
                    android:singleLine="true"
                    android:text="@string/username_placeholder"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <Button
                    android:id="@+id/deleteReviewButton"
                    style="@style/square_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:text="X"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:id="@+id/reviewPublicationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="@dimen/general_margin"
                android:singleLine="true"
                android:text="@string/review_publication_date_placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/reviewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:padding="@dimen/general_margin"
                android:text="@string/review_text_placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>
